package com.xingqiba;
option java_outer_classname = "MessageProtoHandler";

message ChatMessage {
  required int32 chatChannel = 1;
  optional string fromId = 2 [default=""];
  optional string toId = 3 [default=""];
  optional string name = 4 [default=""];
  optional string groupId = 5 [default="0"];  
  optional string message = 6 [default=""];
}
